# crc-catalog

./: Cargo.toml  README.md  generate_catalog.sh  generate_tests.sh
generate-catalog/: Cargo.toml
generate-catalog/src/: main.rs
src/: algorithm.rs  catalog.rs  lib.rs  tests.rs
