[package]
name = "generate-catalog"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0.6.3"
ego-tree = "0.6.2"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = "0.12.5"
scraper = "0.19.0"
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
